--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </a>
       <nav>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><p>Studio</p></li>
+          <li><p>Portfolio</p></li>
+          <li><p>Contacts</p></li>
         </ul>
       </nav>
       <address>
