--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
   </head>
   <body>
     <header>
-      <a htref=""
-        ><img src="public\images\web.png" alt="web" width="44" height="21" />
-        <img
-          src="public\images\studio.png"
-          alt="studio"
-          width="71"
-          height="21"
-        />
-      </a>
+      <a htref="">WebStudio</a>
       <nav>
         <ul>
           <li><p>Studio</p></li>
@@ -70,7 +62,7 @@
         <ul>
           <li>
             <img
-              src=".\public\images\screen.png"
+              src="public\images\screen.jpg"
               alt="Screen"
               width="360"
               height="360"
@@ -78,7 +70,7 @@
           </li>
           <li>
             <img
-              src=".\public\images\phone.png"
+              src="public\images\phone.jpg"
               alt="Phone screen"
               width="360"
               height="360"
@@ -86,7 +78,7 @@
           </li>
           <li>
             <img
-              src=".\public\images\laptop.png"
+              src="public\images\laptop.jpg"
               alt="Phone and screen"
               width="360"
               height="360"
@@ -100,7 +92,7 @@
         <ul>
           <li>
             <img
-              src=".\public\images\mark_guerrero.png"
+              src="public\images\mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -110,7 +102,7 @@
           </li>
           <li>
             <img
-              src=".\public\images\tom_ford.png"
+              src="public\images\tom_ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -120,7 +112,7 @@
           </li>
           <li>
             <img
-              src=".\public\images\camila_garcia.png"
+              src="public\images\camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -130,7 +122,7 @@
           </li>
           <li>
             <img
-              src=".\public\images\daniel_wilson.png"
+              src="public\images\daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -143,15 +135,7 @@
     </main>
 
     <footer>
-      <a htref=""
-        ><img src="public\images\web.png" alt="web" width="44" height="21" />
-        <img
-          src="public\images\studio_inv.png"
-          alt="studio"
-          width="71"
-          height="21"
-        />
-      </a>
+      <a htref="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
