--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a htref="">WebStudio</a>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
           <li><p>Studio</p></li>
@@ -14,16 +14,14 @@
           <li><p>Contacts</p></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </address>
+      <p>info@devstudio.com</p>
+      <p>+11 (000) 111-11-11</p>
     </header>
-
     <main>
+      <!--Hero-->
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
-
+      <!--Section 1-->
       <section>
         <ul>
           <li>
@@ -56,86 +54,67 @@
           </li>
         </ul>
       </section>
-
+      <!--Section 2-->
       <section>
         <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="public\images\screen.jpg"
-              alt="Screen"
-              width="360"
-              height="360"
-            />
-          </li>
-          <li>
-            <img
-              src="public\images\phone.jpg"
-              alt="Phone screen"
-              width="360"
-              height="360"
-            />
-          </li>
-          <li>
-            <img
-              src="public\images\laptop.jpg"
-              alt="Phone and screen"
-              width="360"
-              height="360"
-            />
-          </li>
-        </ul>
+        <img
+          src="./images/screen.jpg"
+          alt="Screen laptop"
+          width="360"
+          height="360"
+        />
+        <img
+          src="./images/phone.jpg"
+          alt="Phone screen"
+          width="360"
+          height="360"
+        />
+        <img
+          src="./images/laptop.jpg"
+          alt="Phone and screen"
+          width="360"
+          height="360"
+        />
       </section>
-
+      <!--Section 3-->
       <section>
         <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="public\images\mark_guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="public\images\tom_ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="public\images\camila_garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="public\images\daniel_wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <img
+          src="./images/mark_guerrero.jpg"
+          alt="Mark Guerrero"
+          width="264"
+          height="260"
+        />
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        <img
+          src="./images/tom_ford.jpg"
+          alt="Tom Ford"
+          width="264"
+          height="260"
+        />
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <img
+          src="./images/camila_garcia.jpg"
+          alt="Camila Garcia"
+          width="264"
+          height="260"
+        />
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <img
+          src="./images/daniel_wilson.jpg"
+          alt="Daniel Wilson"
+          width="264"
+          height="260"
+        />
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
       </section>
     </main>
-
     <footer>
-      <a htref="">WebStudio</a>
+      <a href="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
