--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><p>Studio</p></li>
-          <li><p>Portfolio</p></li>
-          <li><p>Contacts</p></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <p>info@devstudio.com</p>
-      <p>+11 (000) 111-11-11</p>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--Hero-->
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!--Section 1-->
       <section>
+        <h2>Lorem ipsum</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -93,18 +100,12 @@
               src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
-              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/tom_ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
+            <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -113,7 +114,6 @@
               src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
               width="264"
-              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -123,7 +123,6 @@
               src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
               width="264"
-              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -132,7 +131,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
